test/expected/declare_vo_exclam_k_b.out
struct S; declare ! as virtual operator (S) returning bool
         ^
10: error: member operator ! must have exactly 0 parameters
